fix overflow on windows

--- a/src/components/project/project.styl
+++ b/src/components/project/project.styl
@@ -45,7 +45,7 @@ colors_Load = ( #005872 #4d9aa9 #0e7286 #002029 )
     position absolute
     bottom -23px
     left 30px
-    overflow-x hidden
+    overflow hidden
 
   &-title,
   &-author
